Upgraded to use Java 25 (Temurin 25 LTS). All tests pass.
Also tested with `mvn clean test` against temurin 17 and 21 which
both worked fine as well. As d1_portal will be deployed standalone,
it seemed prudent to move to the most recent LTS release.